--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.1682.0",
     "bcrypt": "^5.1.1",
     "calibre": "^5.2.0",
+    "cors": "^2.8.5",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "epub": "^1.2.1",
