--- a/frontend/my-frontend/.env
+++ b/frontend/my-frontend/.env
@@ -1,2 +1,2 @@
 # REACT_APP_API_URL=http://localhost:10000
-REACT_APP_API_URL=https://bookpacer-backend.onrender.com/
+REACT_APP_API_URL=https://bookpacer-backend.onrender.com
